# Jarvis

./: README.md  pyproject.toml
.github/workflows/: secret-scan.yml
src/jarvis/: main.py
src/jarvis/LLM_agents/: LLMAgents.py  agent_prompts.py
src/jarvis/LLM_agents/AgentTools/: Agenttools.py
src/jarvis/TTS/: SentenceSplitter.py  client_grpc.py  text2speech.py
src/jarvis/speech2text/: mc_test.py  speech2text.py
